[project]
name = "async-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "altgraph==0.17.4",
    "anyio==4.4.0",
    "appdirs==1.4.4",
    "aria2p==0.12.0",
    "arrow==1.3.0",
    "asgiref==3.8.1",
    "asttokens==2.4.1",
    "attrs==24.2.0",
    "autopep8==2.3.1",
    "backoff==2.2.1",
    "beautifulsoup4==4.12.3",
    "behave==1.2.6",
    "brotli==1.1.0",
    "brotlicffi==1.1.0.0",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "codetiming==1.4.0",
    "colorama==0.4.6",
    "construct==2.8.8",
    "cryptography==43.0.1",
    "cssselect==1.2.0",
    "curl-cffi==0.7.1",
    "cython==3.0.11",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "dill==0.3.8",
    "exceptiongroup==1.2.2",
    "execnet==2.1.1",
    "executing==2.1.0",
    "fasteners==0.19",
    "filelock==3.16.0",
    "h11==0.14.0",
    "h2==4.1.0",
    "hpack==4.0.0",
    "httpcore==1.0.5",
    "httpx==0.27.2",
    "hyperframe==6.0.1",
    "idna==3.8",
    "iniconfig==2.0.0",
    "ipython==8.27.0",
    "jedi==0.19.1",
    "jeepney==0.8.0",
    "jinja2==3.1.4",
    "kaitaistruct==0.10",
    "loguru==0.7.2",
    "lz4==4.3.3",
    "m3u8==6.0.0",
    "macholib==1.16.3",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "multiprocess==0.70.16",
    "mutagen==1.47.0",
    "numpy==2.1.1",
    "outcome==1.3.0.post0",
    "packaging==24.1",
    "parameterized==0.9.0",
    "parse-type==0.6.3",
    "parse==1.20.2",
    "parso==0.8.4",
    "pdbp==1.5.4",
    "pexpect==4.9.0",
    "pillow==10.4.0",
    "platformdirs==4.3.3",
    "pluggy==1.5.0",
    "prompt-toolkit==3.0.47",
    "protobuf==4.25.3",
    "proxy-py==2.4.7",
    "psutil==6.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py==1.11.0",
    "pyasn1==0.6.1",
    "pycodestyle==2.12.1",
    "pycparser==2.22",
    "pycryptodome==3.20.0",
    "pycryptodomex==3.20.0",
    "pygments==2.18.0",
    "pyinstaller-hooks-contrib==2024.8",
    "pyinstaller==6.10.0",
    "pymp4==1.4.0",
    "pynose==1.5.2",
    "pyopenssl==24.2.1",
    "pyotp==2.9.0",
    "pyparsing==3.1.4",
    "pyrate-limiter==2.10.0",
    "pysimplegui==5.0.6",
    "pysocks==1.7.1",
    "pytest-html==2.0.1",
    "pytest-metadata==3.1.1",
    "pytest-ordering==0.6",
    "pytest-rerunfailures==14.0",
    "pytest-xdist==3.6.1",
    "pytest==8.3.3",
    "python-dateutil==2.9.0.post0",
    "pywidevine==1.8.0",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "rich==13.8.1",
    "rsa==4.9",
    "ruamel-yaml-clib==0.2.8",
    "ruamel-yaml==0.18.6",
    "ruff==0.6.5",
    "sbvirtualdisplay==1.3.0",
    "secretstorage==3.3.3",
    "selenium==4.24.0",
    "seleniumbase==4.30.8",
    "six==1.16.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.6",
    "srt==3.5.3",
    "stack-data==0.6.3",
    "tabcompleter==1.3.3",
    "tabulate==0.9.0",
    "toml==0.10.2",
    "traitlets==5.14.3",
    "trio-websocket==0.11.1",
    "trio==0.26.2",
    "types-python-dateutil==2.9.0.20240906",
    "typing-extensions==4.12.2",
    "undetected-chromedriver",
    "unidecode==1.3.8",
    "urllib3==2.2.3",
    "uvloop==0.20.0",
    "wcwidth==0.2.13",
    "websocket-client==1.8.0",
    "websockets==13.0.1",
    "wsproto==1.2.0",
    "xattr==1.1.0",
    "xmltodict==0.13.0",
    "yt-dlp",
    "zstandard==0.23.0",
]

[tool.uv.sources]
undetected-chromedriver = { path = "../undetected-chromedriver" }
yt-dlp = { path = "../yt-dlp" }


[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E402",    # module-import-not-at-top-of-file
    "E501",    # line-too-long
    "E731",    # lambda-assignment
    "E741",    # ambiguous-variable-name
    "UP036",   # outdated-version-block
    "B006",    # mutable-argument-default
    "B008",    # function-call-in-default-argument
    "B011",    # assert-false
    "B017",    # assert-raises-exception
    "B023",    # function-uses-loop-variable (false positives)
    "B028",    # no-explicit-stacklevel
    "B904",    # raise-without-from-inside-except
    "C401",    # unnecessary-generator-set
    "C402",    # unnecessary-generator-dict
    "PIE790",  # unnecessary-placeholder
    "SIM102",  # collapsible-if
    "SIM108",  # if-else-block-instead-of-if-exp
    "SIM112",  # uncapitalized-environment-variables
    "SIM113",  # enumerate-for-loop
    "SIM114",  # if-with-same-arms
    "SIM115",  # open-file-with-context-handler
    "SIM117",  # multiple-with-statements
    "SIM223",  # expr-and-false
    "SIM300",  # yoda-conditions
    "TD001",   # invalid-todo-tag
    "TD002",   # missing-todo-author
    "TD003",   # missing-todo-link
    "PLE0604", # invalid-all-object (false positives)
    "PLE0643", # potential-index-error (false positives)
    "PLW0603", # global-statement
    "PLW1510", # subprocess-run-without-check
    "PLW2901", # redefined-loop-name
    "RUF001",  # ambiguous-unicode-character-string
    "RUF012",  # mutable-class-default
    "RUF100",  # unused-noqa (flake8 has slightly different behavior)
]
